配置文件修改

--- a/hs_web/src/main/resources/hs.properties
+++ b/hs_web/src/main/resources/hs.properties
@@ -2,5 +2,5 @@ xks.app.basePackages=com.hs
 server.context-path=/
 
 mybatis.mapperLocations=classpath:sql-mappers/*.xml
-mybatis.typeAliasesPackage=
-xks.core.mybatis.mapper.scan.basePackages=
+mybatis.typeAliasesPackage=com.hs.model
+xks.core.mybatis.mapper.scan.basePackages=com.hs.dao
